--- a/src/components/TopBanner/style.css
+++ b/src/components/TopBanner/style.css
@@ -6,6 +6,7 @@
   background: #007ba7;
   display: flex;
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 .banner-text {
   /* border: 2px solid teal; */
@@ -72,8 +73,7 @@
   .banner-text .text-container {
     width: 100%;
     height: 70%;
-    /* padding-left: 100px; */
-    /* border: 2px solid rgb(128, 30, 0); */
+
     flex: 1;
   }
   .banner-text .text-container h1 {
@@ -81,7 +81,7 @@
     font-size: 46px;
     font-style: normal;
     font-weight: 800;
-    line-height: 50px; /* 114.583% */
+    line-height: 50px;
     text-transform: uppercase;
   }
   .banner-text .text-container h4 {
@@ -89,7 +89,7 @@
     font-family: Poppins;
     font-size: 15px;
     font-weight: 500;
-    line-height: 29px; /* 96.667% */
+    line-height: 29px;
     margin: 30px 0px;
   }
   .top-banner-container {
