completed the whole page

--- a/src/components/BestSelling/style.css
+++ b/src/components/BestSelling/style.css
@@ -1,5 +1,5 @@
 .bestSelling-container {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   padding-bottom: 50px;
 }
 .bestSelling-header {
