--- a/src/components/Food/styles.css
+++ b/src/components/Food/styles.css
@@ -1,6 +1,6 @@
 .food-container {
   /* height: 835px; */
-  border: 2px solid red;
+  /* border: 2px solid red; */
   padding-top: 50px;
 }
 .header-text {
