--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -26,12 +26,13 @@
   list-style: none;
   gap: 63px;
 }
-.nav-list li a {
+.nav-list li {
   text-decoration: none;
   color: var(--main-blue, #007ba7);
   font-family: Poppins;
   font-size: 16px;
   font-weight: 500;
+  cursor: pointer;
 }
 .logo {
   height: 60px;
