--- a/src/components/Packaging/style.css
+++ b/src/components/Packaging/style.css
@@ -1,6 +1,6 @@
 .packaging-container {
   margin-top: 50px;
-  border: 1px solid rebeccapurple;
+  /* border: 1px solid rebeccapurple; */
   padding-top: 50px;
 }
 .packaging-header {
@@ -11,7 +11,6 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 0px 445px;
   margin-bottom: 20px;
 }
 .packaging-subheader {
@@ -22,8 +21,103 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  padding: 0px 445px;
   margin-bottom: 35px;
 }
+
+/* details and image container */
 .packaging-content-container {
+  /* border: 2px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px 152px;
+  margin-bottom: 75px;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
+
+.packaging-content-left {
+  /* border: 2px solid green; */
+  flex: 1;
+  height: 476px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.packaging-content-middle {
+  /* border: 2px solid blue; */
+  flex: 1;
+}
+
+.packaging-content-right {
+  /* border: 2px solid yellow; */
+  flex: 1;
+  height: 476px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.packaging-content-textcontainer {
+  width: 216px;
+}
+.packaging-content-header {
+  color: var(--main-blue, #007ba7);
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.packaging-content-subheader {
+  color: var(--text-light-blue, #2c92b1);
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+@media (max-width: 1200px) {
+  .packaging-content-left {
+    height: 376px;
+  }
+  /* .packaging-content-middle {
+    margin: 80px 0px;
+  } */
+
+  .packaging-content-right {
+    height: 376px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .packaging-content-left {
+    height: 320px;
+  }
+  .packaging-content-middle {
+    /* margin: 30px 0px;
+    height: 376px; */
+  }
+  .packaging-content-middle img {
+    /* height: 376px;
+    object-fit: cover; */
+  }
+
+  .packaging-content-right {
+    height: 320px;
+  }
+}
+@media (max-width: 750px) {
+  .packaging-content-middle {
+    margin: 30px 0px;
+    height: 320px;
+    width: 300px;
+  }
+  .packaging-content-middle img {
+    height: 320px;
+    object-fit: cover;
+    width: 300px;
+  }
 }
