--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,15 +1,16 @@
 .navbar-conatiner {
   width: 100%;
-  height: 80px;
+  /* height: 80px; */
   /* border: 2px solid salmon; */
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 10px 0px;
 }
 .navbar {
   /* width: 1238px; */
   width: 90%;
-  height: 60px;
+  /* height: 60px; */
   /* border: 2px solid lightgreen; */
   display: flex;
   justify-content: space-between;
@@ -78,12 +79,19 @@
 }
 @media screen and (max-width: 750px) {
   .navbar-left {
-    display: none;
+    /* display: none; */
   }
   .nav-list {
     display: none;
+    /* flex-direction: column;
+    gap: 10px;
+    position: relative;
+    top: 10px;
+    left: 120px; */
   }
   .hamburger {
     display: block;
+    /* position: relative;
+    top: -50px; */
   }
 }
