--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -54,6 +54,12 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 .hamburger {
   display: none;
